# gent_adam

./: .env.example  .gitignore  README.md  skills-lock.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/artifact_catalog/: app.py  routes.py
backend/artifact_signer/: app.py  routes.py
backend/audit/: app.py  models.py  routes.py
backend/auth/: app.py  dependencies.py  routes.py
backend/evaluation/: app.py  routes.py
backend/identity/: app.py  models.py  routes.py
backend/model_gateway/: __init__.py  app.py  routes.py
backend/planner/: __init__.py  app.py  routes.py
backend/policy_enforcer/: app.py  routes.py
backend/release_manager/: app.py  routes.py
backend/replay/: app.py  routes.py
backend/result_aggregator/: app.py  routes.py
backend/retrieval/: __init__.py  app.py  routes.py
backend/runtime_manager/: app.py  routes.py
backend/sandbox_executor/: app.py  routes.py
backend/shared/: __init__.py  config.py  database.py  middleware.py  storage.py  telemetry.py  vector_index.py
backend/shared/schemas/: __init__.py  audit.py  envelopes.py  evaluation.py  events.py  identity.py  knowledge.py  plans.py  runs.py  tasks.py  tools.py
backend/simulation/: app.py  routes.py
backend/supervisor/: __init__.py  app.py  models.py  routes.py
backend/swarm/: app.py  routes.py
backend/tool_broker/: __init__.py  app.py  routes.py
docs/: Agent_Architect_Pro_API_Interface_Contract_Pack.docx  Agent_Architect_Pro_Command_Standard_Clarification_Integrated.md  Agent_Architect_Pro_Component_by_Component_Figma_Library_Brief.docx  api_contracts_deep_dive.md  (+22 more)
(+50 files in other folders)
